# neotest-catch2

./: .gitignore  README.md
exampleProject/: .projectConfig  CMakeLists.txt  shell.nix
exampleProject/src/: CMakeLists.txt
exampleProject/tests/: CMakeLists.txt  exampleTests.cpp  tests-main.cpp  tests.cpp
lua/neotest-catch2/: init.lua  utils.lua
